// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminUsers /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with admin user 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with createError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with creating=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM liWCTR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loadError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-fnykZs kIjAem"
  >
    <span
      class="sc-llJcti gTNJdJ"
    >
      Could not load users
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas juxlAL admin-users__button"
      disabled=""
      type="button"
    >
      <span
        class="sc-ksZaOG idpoLe"
      >
        Reload users
      </span>
      <div
        aria-hidden="true"
        class="sc-hAZoDl eImVmd button__loading-spinner"
      >
        <div
          class="sc-iqcoie jUFsFD"
        >
          <div
            class="sc-crXcEl bnEQQz"
          />
          <div
            class="sc-crXcEl REdYz"
          />
          <div
            class="sc-crXcEl cnIsZI"
          />
          <div
            class="sc-crXcEl jStvKR"
          />
          <div
            class="sc-crXcEl dliQGu"
          />
          <div
            class="sc-crXcEl jyzewH"
          />
          <div
            class="sc-crXcEl jSmUjv"
          />
          <div
            class="sc-crXcEl jVOpOT"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removeError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removing=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requestError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requesting=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updateError 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updating=true 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with user 1`] = `
<div>
  <div
    class="section__outer"
  >
    <h2
      class="section__heading"
      id="admin-only"
    >
      Admin only
    </h2>
    <span
      class="sc-fnykZs kIjAem"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with users 1`] = `
<div>
  <div>
    <a
      class="sc-iBkjds kXOvCG page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <h1
      class="page-title__heading page-title__heading--with-link"
    >
      Admin users
    </h1>
  </div>
  <div>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-evZas jzlNIL admin-users__button"
      type="button"
    >
      <span
        class="sc-ksZaOG cPAimV"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-fnykZs kIjAem admin-analytics__count"
  >
    Showing 
    3
     of 
    3
     users
  </span>
  <div
    class="split-detail-view__outer admin-users__split-view"
  >
    <div
      class="split-detail-view__list-view"
    >
      <div>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="new-+"
                  >
                    New +
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=1"
          id="1"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="name"
                  >
                    name
                  </h3>
                  <span
                    class="sc-fnykZs kIjAem"
                  >
                    <br />
                    id: 
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=2"
          id="2"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="another"
                  >
                    another
                  </h3>
                  <span
                    class="sc-fnykZs kIjAem"
                  >
                    <br />
                    id: 
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-bjUoiL iXnCrm admin-users__card"
          href="/admin/users?highlight=3"
          id="3"
        >
          <div
            class="sc-idiyUo laTiW"
          >
            <div
              class="sc-dIouRR SXuOK"
            />
            <div
              class="sc-hHLeRK hDubuO"
            >
              <div
                class="split-detail-item__content"
              >
                <div
                  class="subsection__outer"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="a-third"
                  >
                    a third
                  </h3>
                  <span
                    class="sc-fnykZs kIjAem"
                  >
                    <br />
                    id: 
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
